# lab

./: .gitignore  README.md  environment.yml  pyproject.toml
lab/: agent_runtime.py  cli.py  config.py  control.py  db.py  experiments.py  git_checkpoint.py  global_config.py  helpers.py  llm.py  loop.py  memory.py  memory_extra.py  oauth_pkce.py  optimisation.py  orchestrator.py  packets.py  runner.py  state.py
lab/agents/: __init__.py  base.py  critic.py  debugger.py  executer.py  experimenter.py  implementer.py  memory_compactor.py  optimiser.py  planner.py  reporter.py  researcher.py  reviewer.py  shared_prompt.py  skill_writer.py
lab/domains/: __init__.py
lab/tools/: __init__.py  claude_code.py  cursor_cli.py  monitor.py  shell.py  web.py
lab/ui/: console.py  events.py  prompt_text_area.py
lab/workflows/: research_graph.py
scripts/: oauth_login.py  research_bench_ideas.md  run.py  run_bench_smoke.py  run_console.py  smoke_llm.py  toy_run.py
src/research_lab/: __init__.py  cli.py  config.py  control.py  db.py  experiments.py  git_checkpoint.py  global_config.py  llm.py  loop.py  memory.py  memory_extra.py  oauth_pkce.py  orchestrator.py  packets.py  reports.py  runner.py  state.py
tests/: REAL_MEMORY_COMPACTOR_ARTIFACTS.md  analyze_logs.py  test_cli_wrappers.py  test_console.py  test_context_analysis.py  test_context_integration.py  test_db.py  test_e2e_toy_problem.py  test_experiments.py  test_git_checkpoint.py  test_global_config.py  test_helpers.py  test_llm_resolve.py  test_loop.py  test_memory.py  test_memory_integration.py  test_oauth_pkce.py  test_optimisation.py  test_orchestrator.py  test_packets.py  test_pre_orchestrator_mythos_fixtures.py  test_prompt_text_area.py  test_prompts.py  test_runner.py  test_workflow.py
tests/logs/: analysis_report.md  (+21 more)
(+30 files in other folders)
