[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-lab"
version = "0.1.0"
description = "Multi-agent autonomous AI researcher with LangGraph orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "openai>=1.0",
    "httpx>=0.27",
    "textual>=0.80",
    "rich>=13.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.scripts]
lab = "research_lab.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
